--- a/_config.yml
+++ b/_config.yml
@@ -8,12 +8,12 @@ pygments: true
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : Yet another blog
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
+  name : roothoo 
+  email : roothoo@gmail.com
+  github : roothoo	 
   twitter : username
   feedburner : feedname
 
