--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author :
   github : roothoo	 
   twitter : username
   feedburner : feedname
-
+markdown: kramdown
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
