--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ JB :
   #
   comments :
     provider : disqus
-    disqus :
+    disqus : false
       short_name : jekyllbootstrap
     livefyre :
       site_id : 123
