--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ author :
   github : roothoo	 
   twitter : username
   feedburner : feedname
-#markdown: kramdown
-markdown: redcarpet
+markdown: kramdown
+#markdown: redcarpet
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
 # Most places will/should use BASE_PATH to make the urls
